--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -20,7 +20,7 @@
 }
 
 .countdown {
-  margin-top: 70lvh; // pushes it down from top
+  margin-top: 85lvh; // pushes it down from top
   transform: translateY(-50%); // centers the element around 70vh line
   display: flex;
   gap: 1rem;
